# nccc

common/: ncccdlfcn.c  ncccutils.c
javascript/duk-nccc/: CMakeLists.txt  duk-nccc.c
javascript/duk-yuni/: yuniduk.c
javascript/node-nccc/: CMakeLists.txt  nccc-debug-prefix.js.in  nccc-debug-prefix.mjs.in  ncccdlfcn.c  ncccutils.c  node-nccc.c
js/duktape/duk-nccc/: CMakeLists.txt  duk-nccc.c
js/duktape/duk-yuni/: bootstrap.js  yuniduk.c
js/node/node-nccc/: CMakeLists.txt
stubsupport/: CMakeLists.txt  nccc_corelib.c  nccc_corelib.h  ncccexport.h  nccv64.h  stubcode.inc.c
stubsupport/cmake/: NcccStubMacros.cmake
tests/: CMakeLists.txt  tests_nccc.c
tests/testmodule/: CMakeLists.txt  argtests.inc.c  rettests.inc.c  stub_tests_nccc.cmake
wasm/wasm2c/bridge/: _stub.c.in  stub.inc.c
wasm/wasm2c/bridge/cmake/: NcccParseW2cHeader.cmake  NcccParseW2cSource.cmake  NcccW2cDataGen.cmake
wasm/wasm2c/bridge/scripts/: NcccTemplateW2cMetadata.cmake  NcccW2cDataGen.cmake
